--- a/_posts/2023/2023-12-17-salary.md
+++ b/_posts/2023/2023-12-17-salary.md
@@ -116,18 +116,24 @@ transparency.
         <tr><td colspan="5">---</td></tr>
         <tr class="_chk-usd"><td>2022</td><td colspan="4">1 EUR = 1.1373 USD</td></tr>
         <tr class="_chk-usd"><td>2022</td><td>Gekko Part&nbsp;of&nbsp;Accenture</td><td>Salary</td><td>56&nbsp;184€<br><span class="_chk-usd">($63,898.06)</span></td><td>EUR-USD adjustment</td></tr>
-        <tr><td>2022</td><td>SOPHiA Genetics</td><td>Salary</td><td><b>???</b></td><td>Third job, international medtech, based in Bordeaux (France), partially on-site</td></tr>
-        <tr class="_chk-bon"><td>2022</td><td>Gekko Part&nbsp;of&nbsp;Accenture</td><td>Bonus</td><td>???</td><td>Profit sharing</td></tr>
-        <tr class="_chk-bon"><td>2022</td><td>Gekko Part&nbsp;of&nbsp;Accenture</td><td>Bonus</td><td>???</td><td>Contribution to Employee Savings Plan</td></tr>
+        <tr><td>2022</td><td>SOPHiA Genetics</td><td>Salary</td><td><b>60 000€<br><span class="_chk-usd">($68,238)</span></b></td><td>Third job, international medtech, based in Bordeaux (France), partially on-site</td></tr>
+        <tr class="_chk-bon"><td>2022</td><td>Gekko Part&nbsp;of&nbsp;Accenture</td><td>Bonus</td><td>1 012,50€<br><span class="_chk-usd">($1,151.51)</span></td><td>Contribution to Employee Savings Plan</td></tr>
         <tr><td colspan="5">---</td></tr>
         <tr class="_chk-usd"><td>2023</td><td colspan="4">1 EUR = 1.0703 USD</td></tr>
-        <tr class="_chk-usd"><td>2023</td><td>SOPHiA Genetics</td><td>Salary</td><td>???</td><td>EUR-USD adjustment</td></tr>
+        <tr class="_chk-usd"><td>2023</td><td>SOPHiA Genetics</td><td>Salary</td><td><b>60 000€<br><span class="_chk-usd">($64,218)</span></b></td><td>EUR-USD adjustment</td></tr>
+        <tr><td colspan="5">---</td></tr>
+        <tr class="_chk-usd"><td>2024</td><td colspan="4">1 EUR = 1.1035 USD</td></tr>
+        <tr class="_chk-usd"><td>2024</td><td>SOPHiA Genetics</td><td>Salary</td><td><b>60 000€<br><span class="_chk-usd">($66,210)</span></b></td><td>EUR-USD adjustment</td></tr>
+        <tr><td>2024</td><td>Pyl.Tech</td><td>Salary</td><td><b>???</b></td><td>Fourth job, French Cloud consultancy, based in Bordeaux (France), on-site yet flexible</td></tr>
+        <tr><td colspan="5">---</td></tr>
+        <tr class="_chk-usd"><td>2025</td><td colspan="4">1 EUR = 1.0351 USD</td></tr>
+        <tr class="_chk-usd"><td>2025</td><td>Pyl.Tech</td><td>Salary</td><td>???</td><td>EUR-USD adjustment</td></tr>
     </tbody>
 </table>
 
 </div>
 
-Last edit: **17th of December 2023**
+Last edit: **5th of February 2025**
 
 ## Your turn
 
