--- a/_posts/2024/2024-01-28-pledge.md
+++ b/_posts/2024/2024-01-28-pledge.md
@@ -30,9 +30,9 @@ developed countries, violence and death from it are inevitable. Why do we waste 
 that dividing the world's population will solve our scarcity problems overnight?!
 
 It is all there. We have the technology to improve lives. It does not require IT, only strong will and effort. We have
-made the world harder to understand with layers of abstraction and bureaucracy, can we get rid of that? We use technology to
-connect, can we chat in person or over the phone? Telemetry, analytics and tracking are baked into everything, can we
-avoid that?
+made the world harder to understand with layers of abstraction and bureaucracy, can we get rid of that? We use
+technology to connect, can we chat in person or over the phone? Telemetry, analytics and tracking are baked into
+everything, can we avoid that?
 
 ## What I do
 
