Update salary blog post

--- a/_posts/2024/2024-01-28-pledge.md
+++ b/_posts/2024/2024-01-28-pledge.md
@@ -59,8 +59,8 @@ implement. The best way to start is to learn about your electricity use. Knowled
 ### Charity
 
 I donate to charity at least once a year. I encourage people to donate to food banks and people who need food banks to
-visit them! If you don't use meal vouchers, you can reduce your taxes by donating that money! Or help homeless people by
-directly buying them something.
+visit them! If you don't use all your meal vouchers, you can reduce your taxes by donating that money! Or help homeless
+people by directly buying them something.
 
 ## The pledge
 
@@ -75,7 +75,7 @@ it. I will follow this cycle:
 - Buying more housing;
 - Improving their efficiency;
 - Renting them through a government partner to low-income families at the lowest acceptable price. That price must cover
-  the costs of the home, including taxes.
+  expenses and taxes, no more.
 
 This will not move the needle enough but the families who will live in these homes will never have to worry about
 shelter again. They will gain access to better food, clothing, leisure and their own personal projects. They will learn
